--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "devDependencies": {
     "grunt": "~0.4.5",
     "grunt-autoprefixer": "^2.2.0",
+    "grunt-contrib-connect": "^0.9.0",
     "grunt-contrib-watch": "~0.6.1",
+    "grunt-http-server": "^1.1.0",
     "grunt-sass": "~0.17.0",
     "node-sass": "~1.2.3"
   }
